# python-stack

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
docs/openapi/: openapi.yml
docs/openapi/api/v1/monitored/: health.openapi.yml  ready.openapi.yml
scripts/: lint-mypy.sh  lint-openapi.sh  lint-pylint.sh  pytest-with-coverage.sh
src/python_stack/core/api/: tags.py
src/python_stack/core/api/monitored/: __init__.py  health.py  readiness.py
src/python_stack/core/application/: __init__.py  abstract.py  config.py  enums.py  plugins.py
src/python_stack/core/application/abstracts/: __init__.py  base.py  fastapi.py  plugins.py
src/python_stack/core/plugins/http_client_plugin/: __init__.py  configs.py  exceptions.py  manager.py  resource.py
src/python_stack/core/plugins/logging_plugin/: __init__.py  configures.py  filters.py  utils.py  uvicorn_disable_logging.json
src/python_stack/core/plugins/opentelemetry_plugin/: __init__.py  configs.py  factories.py
src/python_stack/core/utils/: environment.py  fastapi_inject.py  importlib.py  inject_helper.py  yaml_reader.py
src/python_stack/core/utils/monitor/: abstract.py  enums.py
src/python_stack/core/utils/monitored/: __init__.py  abstract.py  enums.py  models.py  service.py
src/python_stack/example/: __main__.py  application.py  application.yaml
src/python_stack/example/api/: __init__.py  example.py  tags.py
src/python_stack/example/services/: example.py
src/python_stack/template/: __main__.py
tests/units/: abstract.py
tests/units/core/api/monitored/: test_health.py  test_readiness.py
tests/units/core/application/: test_config.py
tests/units/core/utils/: test_yaml_reader.py
tests/units/core/utils/monitor/: test_health_resolver.py  test_readiness_resolver.py  test_service.py
tests/units/core/utils/monitored/: test_health_resolver.py  test_readiness_resolver.py  test_service.py
tests/units/example/: test_application.py
