[tool.poetry]
name = "python-stack"
version = "0.1.0"
description = ""
authors = ["miragecentury <victorien.vanroye@gmail.com>"]
readme = "README.md"
packages = [
    { include = "python_stack", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
pyyaml = {version="^6.0.1", optional=true}
reactivex = "^4.0.4"
uvicorn = "^0.29.0"
inject = "^5.2.1"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]


[tool.poetry.extras]
yaml = ["pyyaml"]

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "tests -n auto --color=yes"

[tool.black]
line-length = 88
target-version = ['py311']